Commit 2 - remove bootstrap, style using flexbox

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My Todo List</title>
-    <link href='http://getbootstrap.com/getting-started/#download-cdn'
+    <title>To Do List</title>
     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
-    <h1>To Do List</h1>
+    <h1 class="h">To Do List</h1>
     <div class='post'>
         <input id="postBox"></input>
         <button  id=addButton>Add</button>
