--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
-    <h1 class="h">To Do List</h1>
+    <h1>To Do List</h1>
     <div class='post'>
         <input id="postBox"></input>
-        <button  id=addButton>Add</button>
+        <button  id="addButton">Add</button>
     </div>
     <ul id=list>
     </ul>
